Add fully-documented PostGISReader util + integration tests